[package]
name = "serde_sjson"
version = "0.2.4"
edition = "2021"
keywords = ["serde", "serialization", "sjson"]
description = "An SJSON serialization file format"
categories = ["encoding", "parser-implementations"]

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
serde = { version = "1.0.154", default-features = false }

[dev-dependencies]
serde = { version = "1.0.154", features = ["derive"] }
