[package]
name = "serde_sjson"
version = "1.2.0"
authors = ["Lucas Schwiderski"]
categories = ["encoding", "parser-implementations"]
description = "An SJSON serialization file format"
documentation = "https://docs.rs/serde_sjson"
edition = "2021"
keywords = ["serde", "serialization", "sjson"]
license-file = "LICENSE"
repository = "https://github.com/sclu1034/serde_sjson"
exclude = [
    ".github/",
    ".ci/",
    "Justfile"
]

[dependencies]
nom = "8"
nom_locate = "5"
serde = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[badges]
maintenance = { status = "passively-maintained" }
